# 2023-aoc-rust-solutions

./: .gitignore  Cargo.toml  README.md
day2/src/: main.rs
src/: lib.rs
