[package]
name = "my-aoc-solutions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
error-chain = "0.12.4"
regex = "1.10.2"
reqwest = {version="0.11.22", features = ["blocking", "cookies"]}

[lib]
name = "utils"
path = "src/lib.rs"
